--- a/app/src/main/res/layout/fragment_enter_email.xml
+++ b/app/src/main/res/layout/fragment_enter_email.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,6 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/half_of_the_header_width"
             android:orientation="vertical">
 
             <com.avenjr.me.me.ui.views.CustomTextView
@@ -25,35 +25,25 @@
                 android:textSize="@dimen/content_description_size"
                 android:textStyle="bold" />
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="5dp">
+            <ImageView
+                android:id="@+id/approve_reject_image"
+                android:layout_width="@dimen/half_of_the_header_width"
+                android:layout_height="@dimen/half_of_the_header_width"
+                android:layout_gravity="end"
+                android:layout_margin="5dp"
+                android:contentDescription="@string/approve_reject_image" />
 
-                    <com.avenjr.me.me.ui.views.CustomEditText
-                        android:id="@+id/reg_email_txt"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:hint="@string/enter_email"
-                        android:background="@null"
-                        android:padding="10dp"
-                        android:layout_margin="10dp"
-                        android:shadowColor="@color/white"
-                        android:singleLine="true"
-                        android:textColorHint="@color/gray">
-                    </com.avenjr.me.me.ui.views.CustomEditText>
-                <ImageView
-                    android:id="@+id/approve_reject_image"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="end"
-                    android:layout_margin="20dp"
-                    android:contentDescription="@string/approve_reject_image" />
-            </androidx.cardview.widget.CardView>
+            <com.avenjr.me.me.ui.views.SelectableEditText
+                android:id="@+id/reg_email_txt"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/header_height"
+                android:background="@drawable/edit_text_unselected"
+                android:hint="@string/enter_email"
+                android:padding="10dp"
+                android:shadowColor="@color/white"
+                android:singleLine="true"
+                android:textColorHint="@color/gray" />
 
         </LinearLayout>
-
     </ScrollView>
 </RelativeLayout>
