--- a/app/src/main/res/drawable/circular.xml
+++ b/app/src/main/res/drawable/circular.xml
@@ -5,5 +5,6 @@
     android:thickness="7dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="40dp"/>
+    <gradient android:gradientRadius="@dimen/content_margin"/>
     <solid android:color="@color/red" />
 </shape>
