--- a/app/src/main/res/layout/fragment_enter_password.xml
+++ b/app/src/main/res/layout/fragment_enter_password.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,48 +22,58 @@
                 android:layout_margin="15dp"
                 android:text="@string/add_your_password"
                 android:textColor="@color/black"
-                android:textSize="25sp"
+                android:textSize="@dimen/content_description_size"
                 android:textStyle="bold" />
 
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="5dp">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingLeft="20dp"
+                android:paddingEnd="20dp"
+                android:paddingRight="20dp">
 
-                <LinearLayout
+                <ImageView
+                    android:id="@+id/approve_reject__pass_image"
+                    android:layout_width="@dimen/half_of_the_header_width"
+                    android:layout_height="@dimen/half_of_the_header_width"
+                    android:layout_gravity="end"
+                    android:layout_margin="2dp"
+                    android:contentDescription="@string/approve_reject_image" />
+
+                <com.avenjr.me.me.ui.views.SelectableEditText
+                    android:id="@+id/reg_password_txt"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:padding="10dp">
+                    android:layout_height="@dimen/header_height"
+                    android:background="@drawable/edit_text_unselected"
+                    android:hint="@string/enter_password"
+                    android:padding="10dp"
+                    android:shadowColor="@color/green"
+                    android:singleLine="true"
+                    android:textColorHint="@color/gray"></com.avenjr.me.me.ui.views.SelectableEditText>
 
-                    <com.avenjr.me.me.ui.views.CustomEditText
-                        android:id="@+id/reg_pass_txt"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:hint="@string/enter_password"
-                        android:padding="10dp"
-                        android:shadowColor="@color/white"
-                        android:singleLine="true"
-                        android:textColorHint="@color/gray">
-                    </com.avenjr.me.me.ui.views.CustomEditText>
+                <ImageView
+                    android:id="@+id/approve_reject__confirm_image"
+                    android:layout_width="@dimen/half_of_the_header_width"
+                    android:layout_height="@dimen/half_of_the_header_width"
+                    android:layout_gravity="end"
+                    android:layout_margin="2dp"
+                    android:contentDescription="@string/approve_reject_image" />
 
+                <com.avenjr.me.me.ui.views.SelectableEditText
+                    android:id="@+id/reg__re_password_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/header_height"
+                    android:background="@drawable/edit_text_unselected"
+                    android:hint="@string/confirm_password"
+                    android:padding="10dp"
+                    android:shadowColor="@color/green"
+                    android:singleLine="true"
+                    android:textColorHint="@color/gray"></com.avenjr.me.me.ui.views.SelectableEditText>
 
-                    <com.avenjr.me.me.ui.views.CustomEditText
-                        android:id="@+id/reg_repass_txt"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:hint="@string/confirm_password"
-                        android:padding="10dp"
-                        android:shadowColor="@color/white"
-                        android:singleLine="true"
-                        android:textColorHint="@color/gray">
-                    </com.avenjr.me.me.ui.views.CustomEditText>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
         </LinearLayout>
-
     </ScrollView>
-</FrameLayout>
+
+</RelativeLayout>
