--- a/app/src/main/res/layout/fragment_verify_number.xml
+++ b/app/src/main/res/layout/fragment_verify_number.xml
@@ -30,7 +30,7 @@
         android:layout_margin="20dp"
         android:text="@string/confirm_mobile_number"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="@dimen/content_description_size"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/skip_button"/>
 
