--- a/app/src/main/res/layout/fragment_enter_password.xml
+++ b/app/src/main/res/layout/fragment_enter_password.xml
@@ -47,10 +47,11 @@
                     android:layout_height="@dimen/header_height"
                     android:background="@drawable/edit_text_unselected"
                     android:hint="@string/enter_password"
+                    android:inputType="textPassword"
                     android:padding="10dp"
                     android:shadowColor="@color/green"
                     android:singleLine="true"
-                    android:textColorHint="@color/gray"></com.avenjr.me.me.ui.views.SelectableEditText>
+                    android:textColorHint="@color/gray"/>
 
                 <ImageView
                     android:id="@+id/approve_reject__confirm_image"
@@ -67,6 +68,7 @@
                     android:background="@drawable/edit_text_unselected"
                     android:hint="@string/confirm_password"
                     android:padding="10dp"
+                    android:inputType="textPassword"
                     android:shadowColor="@color/green"
                     android:singleLine="true"
                     android:textColorHint="@color/gray"></com.avenjr.me.me.ui.views.SelectableEditText>
