--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/header_height"
+        android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
         app:layout_constraintTop_toBottomOf="@+id/navigation_header" />
 
