- Completed profile slider code.

--- a/app/src/main/res/drawable/curve_only_top_30_appbackground.xml
+++ b/app/src/main/res/drawable/curve_only_top_30_appbackground.xml
@@ -3,5 +3,5 @@
     <stroke android:width="2dp" android:color="#efffff" />
     <corners android:radius="1dp" android:topLeftRadius="30dp" android:topRightRadius="30dp"
         android:bottomLeftRadius="0dp" android:bottomRightRadius="0dp"/>
-    <solid android:color="@color/appBackgroundDark"/>
+    <solid android:color="@color/appBackground"/>
 </shape>
